    of child elements for each parent object. This allows the full
    traversal of items to be clear and unambiguous (as well as loggable),
    with an easy method of limiting a traversal (just pass flags which
    are picked up by appropriate get_children() methods). [ticket:501]

    - the "else_" parameter to the case statement now properly works when
    set to zero.

- oracle:
    - got binary working for any size input !  cx_oracle works fine,
      it was my fault as BINARY was being passed and not BLOB for
      setinputsizes (also unit tests werent even setting input sizes).

    - auto_setinputsizes defaults to True for Oracle, fixed cases where
      it improperly propigated bad types.

- orm:
    - the full featureset of the SelectResults extension has been merged
      into a new set of methods available off of Query.  These methods
      all provide "generative" behavior, whereby the Query is copied
      and a new one returned with additional criterion added.  
      The new methods include:

          filter() - applies select criterion to the query
          filter_by() - applies "by"-style criterion to the query
          avg() - return the avg() function on the given column
          join() - join to a property (or across a list of properties)
          outerjoin() - like join() but uses LEFT OUTER JOIN
          limit()/offset() - apply LIMIT/OFFSET
          range-based access which applies limit/offset:  
             session.query(Foo)[3:5]
          distinct() - apply DISTINCT
          list() - evaluate the criterion and return results
          
      no incompatible changes have been made to Query's API and no methods
      have been deprecated.  Existing methods like select(), select_by(),
      get(), get_by() all execute the query at once and return results
      like they always did.  join_to()/join_via() are still there although
      the generative join()/outerjoin() methods are easier to use.
      