@@ -39,7 +39,8 @@ class SelectResultsTest(PersistTest):
         res = self.query.select_by(range=5)
         assert res.order_by([Foo.c.bar])[0].bar == 5
         assert res.order_by([desc(Foo.c.bar)])[0].bar == 95
-        
+
+    @testbase.unsupported('mssql')
     def test_slice(self):
         assert self.res[1] == self.orig[1]
         assert list(self.res[10:20]) == self.orig[10:20]
@@ -49,6 +50,11 @@ class SelectResultsTest(PersistTest):
         assert list(self.res[10:40:3]) == self.orig[10:40:3]
         assert list(self.res[-5:]) == self.orig[-5:]
         assert self.res[10:20][5] == self.orig[10:20][5]
+
+    @testbase.supported('mssql')
+    def test_slice_mssql(self):
+        assert list(self.res[:10]) == self.orig[:10]
+        assert list(self.res[:10]) == self.orig[:10]
 
     def test_aggregate(self):
         assert self.res.count() == 100
@@ -60,10 +66,13 @@ class SelectResultsTest(PersistTest):
         # this one fails in mysql as the result comes back as a string
         assert self.res.filter(foo.c.bar<30).sum(foo.c.bar) == 435
 
-    @testbase.unsupported('postgres', 'mysql', 'firebird')
+    @testbase.unsupported('postgres', 'mysql', 'firebird', 'mssql')
     def test_aggregate_2(self):
-        # this one fails with postgres, the floating point comparison fails
         assert self.res.filter(foo.c.bar<30).avg(foo.c.bar) == 14.5
+
+    @testbase.supported('postgres', 'mysql', 'firebird', 'mssql')
+    def test_aggregate_2_int(self):
+        assert int(self.res.filter(foo.c.bar<30).avg(foo.c.bar)) == 14
 
     def test_filter(self):
         assert self.res.count() == 100
